--- a/index.ipynb
+++ b/index.ipynb
@@ -51,20 +51,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver class here"
+    "class Driver():\n",
+    "    def greeting(self):\n",
+    "        return \"Hey, how are you?\"\n",
+    "\n",
+    "    def ask_for_destination(self):\n",
+    "        return \"Where would you like to go today?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here "
+    "class Passenger():\n",
+    "    def reply_greeting(self):\n",
+    "        return \"I am doing well! Thanks for picking me up today!\"\n",
+    "\n",
+    "    def in_a_hurry(self):\n",
+    "        return \"Punch it! They're on our tail!\""
    ]
   },
   {
@@ -79,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "daniel = None # driver\n",
-    "meryl = None # driver\n",
-    "niky = None # passenger\n",
-    "terrance = None # passenger"
+    "daniel = Driver() # driver\n",
+    "meryl = Driver() # driver\n",
+    "niky = Passenger() # passenger\n",
+    "terrance = Passenger() # passenger"
    ]
   },
   {
@@ -98,21 +108,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, how are you?\n"
+     ]
+    }
+   ],
    "source": [
-    "polite_greeting = None\n",
+    "polite_greeting = daniel.greeting()\n",
     "print(polite_greeting)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Punch it! They're on our tail!\n"
+     ]
+    }
+   ],
    "source": [
-    "no_time_to_talk = None\n",
+    "no_time_to_talk = niky.in_a_hurry()\n",
     "print(no_time_to_talk)"
    ]
   },
@@ -129,29 +155,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Lion class"
+    "class Lion():\n",
+    "    def speak(self):\n",
+    "        return \"Rawr!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Tiger class"
+    "class Tiger():\n",
+    "    def speak(self):\n",
+    "        return \"Growr!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Elephant class"
+    "class Elephant():\n",
+    "    def speak(self):\n",
+    "        return \"Brizr!\""
    ]
   },
   {
@@ -163,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = None\n",
-    "tony = None\n",
-    "dumbo = None"
+    "simba = Lion()\n",
+    "tony = Tiger()\n",
+    "dumbo = Elephant()"
    ]
   },
   {
@@ -181,11 +213,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Lion at 0x108a1c0b8>,\n",
+       " <__main__.Tiger at 0x108a1c080>,\n",
+       " <__main__.Elephant at 0x108a1c0f0>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "zoo = None"
+    "zoo = []\n",
+    "zoo.append(simba)\n",
+    "zoo.append(tony)\n",
+    "zoo.append(dumbo)\n",
+    "zoo"
    ]
   },
   {
@@ -197,10 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rawr!\n",
+      "Growr!\n",
+      "Brizr!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in zoo:\n",
+    "    print(animal.speak())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
